fix: make sure code blocks wrap

--- a/prisma/prisma-cloud/blocks/article/article.css
+++ b/prisma/prisma-cloud/blocks/article/article.css
@@ -152,6 +152,7 @@
   background: var(--article-background);
   border-radius: var(--article-border-radius);
   min-height: 100vh;
+  min-width: 0;
   padding: var(--spacing--10);
   position: relative;
   transition: background-color var(--theme-transition-ease-duration)
@@ -166,8 +167,8 @@
 
 .article [data-docs-heading] .anchor {
   position: absolute;
-  top: calc(-1 * var(--nav-height) - var(--spacing--10));
-  transform: translateY(-100%);
+  top: calc(-1 * var(--nav-height));
+  /* transform: translateY(-100%); */
   height: 50px;
   width: 50px;
 }
@@ -431,11 +432,9 @@ article [data-docs-heading] span {
 .pan-article .book-content pre {
   display: block;
   margin: var(--spacing--6) 0;
-  overflow: visible;
+  overflow-x: auto;
+  overflow-y: hidden;
   width: 100%;
-  white-space: pre-wrap;
-  word-break: break-all;
-  word-wrap: break-word;
 }
 
 .pan-article .banner-meta {
